--- a/2023.md
+++ b/2023.md
@@ -2,7 +2,7 @@
 
 In an effort to analyze market activity and make use of some of the data I've gathered, this report will delve into the activity of the card market in 2023, as well as make some comparisons to that of 2022.
 
-All of these statistics will be looked at with gifting (trades where the price = 0) and without gifting, as well have their [relevant sql query provided](https://github.com/Kractero/2023/blob/master/Queries.md).
+All of these statistics will be looked at with gifting (trades where the price = 0) and without gifting, as well have their [relevant sql query provided](https://github.com/Kractero/seminar/blob/master/%202023/Queries.md).
 
 Go to section
 
@@ -1061,7 +1061,7 @@ The most active buyer at the time was The North Pacific S3, at 1011. Conversely,
 
 Note: UTC
 
-![Hours of the Day](Hourly.png)
+![Hours of the Day](2023/Hourly.png)
 
 | Hour | Total Trades | Money Moved |
 | ---- | ------------ | ----------- |
@@ -1092,7 +1092,7 @@ Note: UTC
 
 #### Day of the Week
 
-![Days of the Week](Daily.png)
+![Days of the Week](2023/Daily.png)
 
 | Day       | Total Trades | Money Moved |
 | --------- | ------------ | ----------- |
@@ -1106,12 +1106,12 @@ Note: UTC
 
 #### Hour vs Day Heatmaps
 
-![Bank Moved heatmap by day and hour](Heatmap.png)
-![Trade count heatmap by day and hour](Heatmap2.png)
+![Bank Moved heatmap by day and hour](2023/Heatmap.png)
+![Trade count heatmap by day and hour](2023/Heatmap2.png)
 
 #### Month of the Year
 
-![Months of the Year](Monthly.png)
+![Months of the Year](2023/Monthly.png)
 
 | Month   | Total Trades | Money Moved |
 | ------- | ------------ | ----------- |
