--- a/2023.md
+++ b/2023.md
@@ -1061,7 +1061,7 @@ The most active buyer at the time was The North Pacific S3, at 1011. Conversely,
 
 Note: UTC
 
-![Hours of the Day](2023/Hourly.png)
+![Hours of the Day](/2023/Hourly.png)
 
 | Hour | Total Trades | Money Moved |
 | ---- | ------------ | ----------- |
@@ -1092,7 +1092,7 @@ Note: UTC
 
 #### Day of the Week
 
-![Days of the Week](2023/Daily.png)
+![Days of the Week](/2023/Daily.png)
 
 | Day       | Total Trades | Money Moved |
 | --------- | ------------ | ----------- |
@@ -1106,12 +1106,12 @@ Note: UTC
 
 #### Hour vs Day Heatmaps
 
-![Bank Moved heatmap by day and hour](2023/Heatmap.png)
-![Trade count heatmap by day and hour](2023/Heatmap2.png)
+![Bank Moved heatmap by day and hour](/2023/Heatmap.png)
+![Trade count heatmap by day and hour](/2023/Heatmap2.png)
 
 #### Month of the Year
 
-![Months of the Year](2023/Monthly.png)
+![Months of the Year](/2023/Monthly.png)
 
 | Month   | Total Trades | Money Moved |
 | ------- | ------------ | ----------- |
